# nginx_learning

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  aa.txt
auto/: make  modules  options
help/queue/: Nginx 队列双向链表结构 ngx_queue_t · 理解 Nginx 源码 · 看云.html
help/queue/Nginx 队列双向链表结构 ngx_queue_t · 理解 Nginx 源码 · 看云_files/: reader.js.下载
objs/: Makefile  autoconf.err  autotest.c  nginx  nginx.8  ngx_auto_config.h
src/core/: nginx.c  ngx_array.c  ngx_array.h  ngx_buf.h  ngx_conf_file.h  ngx_cycle.h  ngx_file.h  ngx_hash.c  ngx_hash.h  ngx_list.h  ngx_log.c  ngx_palloc.c  ngx_palloc.h  ngx_queue.h  ngx_queue_test.c  ngx_rbtree.h  ngx_string.c  ngx_times.c
src/event/: ngx_event.c  ngx_event_openssl.c
src/http/: ngx_http_file_cache.c
src/os/unix/: ngx_alloc.c  ngx_errno.c  ngx_files.h  ngx_linux_aio_read.c  ngx_process.c  ngx_process.h  ngx_process_cycle.c  ngx_pthread_thread.c  ngx_time.c
thirdModule/ngx_http_mytest_module/: ngx_http_mytest_module(sendfile).c  ngx_http_mytest_module.c
